fix bookmarks toolbar on Firefox 130 Fixes the additional space under the bookmarks toolbar when using rounded corners.

--- a/chrome/global/browser.css
+++ b/chrome/global/browser.css
@@ -26,6 +26,7 @@
   #main-window[BookmarksToolbarOverlapsBrowser] .newTabBrowserPanel,
   #main-window[BookmarksToolbarOverlapsBrowser] #sidebar-box {
     padding-top: 0 !important;
+    margin-top: 0 !important;
   }
 
   #main-window[BookmarksToolbarOverlapsBrowser] #browser {
